Endret css og tekst
Endre skriftstørrelse for hele body i css og endre teksten under bildene på campus.html

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body {
   padding-top: 50px;
   /* Sørger for litt avstand mellom footer og bunnen av siden */
   padding-bottom: 100px;
+  font-size: larger;
 }
 
 /* Legg til marg på venstre side av headings og paragraph tags, med mindre annet er spesifisert i egen klasse */
