--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ a {
 }
 
 .oslomet-logo {
- flex: 1;
+ flex: 4;
 }
 
 .dropdown {
@@ -106,6 +106,7 @@ a {
   /* a i rgba sørger for at skyggen er mer blurry */
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   width: 20rem;
+  text-align: right;
 }
 
 /* Linkene inne i nedtrekksmenyen */
