--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ img {
   padding-top: 50px;
   margin-bottom: 18px;
   animation: moveright 1s linear 1;
-  animation-delay: .5s;
+  animation-delay: 1s;
   visibility: hidden;
   animation-fill-mode: forwards;
 }
