--- a/css/main.css
+++ b/css/main.css
@@ -195,10 +195,11 @@ img {
 
 /* utseende av h1-overskrift som ligger i heading-containeren */
 .heading-container h1 {
-  font-size: 35px;
-  font-weight: 100;
+  font-size: 40px;
+  font-weight: bold;
   padding-top: 50px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+  color: rgb(51, 49, 51);
   /* Teksten kommer inn fra venstre med 1s forsinkelse */
   animation: moveright 1s linear 1;
   animation-delay: 1s;
@@ -209,6 +210,7 @@ img {
 
 .heading-container p {
   font-size: 25px;
+  font-weight: bold;
   animation: moveright 1s linear 1;
   animation-delay: 1s;
   /* Når animasjonen begynner kan man ikke se teksten */
@@ -216,7 +218,7 @@ img {
   animation-fill-mode: forwards;
   padding-top: 10px;
   line-height: 1.3;
-  color: black;
+  color: rgb(51, 49, 51);
 }
 
 .main-heading {
